--- a/Homeworks/01-Intro/Homework-01.ipynb
+++ b/Homeworks/01-Intro/Homework-01.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c3a5648c-841b-4d4f-8447-dbfd0e2d6d1d",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ac25b8e5-018f-4b89-933a-4c643ed572bb",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "'2.3.2'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
     "\n",
     "- 4704\n",
     "- 8704\n",
-    "- 9704\n",
+    "- 9704 <---\n",
     "- 17704"
    ]
   },
@@ -175,7 +175,7 @@
     "How many fuel types are presented in the dataset?\n",
     "\n",
     "- 1\n",
-    "- 2\n",
+    "- 2 <---\n",
     "- 3\n",
     "- 4"
    ]
@@ -216,7 +216,7 @@
     "- 1\n",
     "- 2\n",
     "- 3\n",
-    "- 4"
+    "- 4 <---"
    ]
   },
   {
@@ -284,7 +284,7 @@
     "What's the maximum fuel efficiency of cars from Asia?\n",
     "\n",
     "- 13.75\n",
-    "- 23.75\n",
+    "- 23.75 <---\n",
     "- 33.75\n",
     "- 43.75"
    ]
@@ -327,7 +327,7 @@
     "Has it changed?\n",
     "\n",
     "\n",
-    "- Yes, it increased\n",
+    "- Yes, it increased <---\n",
     "- Yes, it decreased\n",
     "- No"
    ]
@@ -524,7 +524,7 @@
     "> **Note**: You just implemented linear regression. We'll talk about it in the next lesson.\n",
     "\n",
     "- 0.051\n",
-    "- 0.51\n",
+    "- 0.51 <---\n",
     "- 5.1\n",
     "- 51"
    ]
