--- a/Practice/04-Evaluation/notebook.ipynb
+++ b/Practice/04-Evaluation/notebook.ipynb
@@ -48,10 +48,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b3ff7c44",
+   "execution_count": null,
+   "id": "779ec362-8723-465b-b384-43d4f6eedd40",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# !wget \"https://raw.githubusercontent.com/alexeygrigorev/mlbookcamp-code/master/chapter-03-churn-prediction/WA_Fn-UseC_-Telco-Customer-Churn.csv\" -O 'data-week-3.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b3ff7c44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2025-10-20 08:40:10--  https://raw.githubusercontent.com/alexeygrigorev/mlbookcamp-code/master/chapter-03-churn-prediction/WA_Fn-UseC_-Telco-Customer-Churn.csv\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 977501 (955K) [text/plain]\n",
+      "Saving to: ‘data-week-3.csv’\n",
+      "\n",
+      "data-week-3.csv     100%[===================>] 954.59K  --.-KB/s    in 0.005s  \n",
+      "\n",
+      "2025-10-20 08:40:10 (187 MB/s) - ‘data-week-3.csv’ saved [977501/977501]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1778,7 +1806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
