--- a/Homeworks/04-Evaluation/Homework-04.ipynb
+++ b/Homeworks/04-Evaluation/Homework-04.ipynb
@@ -25,13 +25,248 @@
     }
    ],
    "source": [
-    "!wget https://raw.githubusercontent.com/DataTalksClub/machine-learning-zoomcamp/refs/heads/master/cohorts/2025/04-evaluation/homework.md"
+    "# !wget https://raw.githubusercontent.com/DataTalksClub/machine-learning-zoomcamp/refs/heads/master/cohorts/2025/04-evaluation/homework.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59d31f7e-948e-46a6-9aba-b931149a25de",
+   "metadata": {},
+   "source": [
+    "## Homework\n",
+    "\n",
+    "> Note: sometimes your answer doesn't match one of \n",
+    "> the options exactly. That's fine. \n",
+    "> Select the option that's closest to your solution.\n",
+    "\n",
+    "\n",
+    "In this homework, we will use the lead scoring dataset Bank Marketing dataset. Download it from [here](https://raw.githubusercontent.com/alexeygrigorev/datasets/master/course_lead_scoring.csv).\n",
+    "\n",
+    "\n",
+    "In this dataset our desired target for classification task will be `converted` variable - has the client signed up to the platform or not. \n",
+    "\n",
+    "### Data preparation\n",
+    "\n",
+    "* Check if the missing values are presented in the features.\n",
+    "* If there are missing values:\n",
+    "    * For caterogiral features, replace them with 'NA'\n",
+    "    * For numerical features, replace with with 0.0 "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac7a3ff-b4e2-4021-a44e-19ab8c89c361",
+   "id": "2528c18e-55a0-4d86-920e-40b0b1c83dc1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f1d6b95-1046-4a3f-94c6-80ec72d08c26",
+   "metadata": {},
+   "source": [
+    "Split the data into 3 parts: train/validation/test with 60%/20%/20% distribution. Use `train_test_split` function for that with `random_state=1`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d634676-1f91-4b60-9289-78f35d0b8dee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16e909b1-f215-490f-bd91-c9db33e70fda",
+   "metadata": {},
+   "source": [
+    "### Question 1: ROC AUC feature importance\n",
+    "\n",
+    "ROC AUC could also be used to evaluate feature importance of numerical variables. \n",
+    "\n",
+    "Let's do that\n",
+    "\n",
+    "* For each numerical variable, use it as score (aka prediction) and compute the AUC with the `y` variable as ground truth.\n",
+    "* Use the training dataset for that\n",
+    "\n",
+    "\n",
+    "If your AUC is < 0.5, invert this variable by putting \"-\" in front\n",
+    "\n",
+    "(e.g. `-df_train['balance']`)\n",
+    "\n",
+    "AUC can go below 0.5 if the variable is negatively correlated with the target variable. You can change the direction of the correlation by negating this variable - then negative correlation becomes positive.\n",
+    "\n",
+    "Which numerical variable (among the following 4) has the highest AUC?\n",
+    "\n",
+    "- `lead_score`\n",
+    "- `number_of_courses_viewed`\n",
+    "- `interaction_count`\n",
+    "- `annual_income`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fddb05a6-d686-4f08-8fc7-d479a18f82bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0171b01-0c7c-43cb-a011-49d083857528",
+   "metadata": {},
+   "source": [
+    "### Question 2: Training the model\n",
+    "\n",
+    "Apply one-hot-encoding using `DictVectorizer` and train the logistic regression with these parameters:\n",
+    "\n",
+    "```python\n",
+    "LogisticRegression(solver='liblinear', C=1.0, max_iter=1000)\n",
+    "```\n",
+    "\n",
+    "What's the AUC of this model on the validation dataset? (round to 3 digits)\n",
+    "\n",
+    "- 0.32\n",
+    "- 0.52\n",
+    "- 0.72\n",
+    "- 0.92"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "001a242f-afb8-4232-b478-74ebd4b1e495",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d046d225-dcbe-4430-b0ae-19753cf8abe4",
+   "metadata": {},
+   "source": [
+    "### Question 3: Precision and Recall\n",
+    "\n",
+    "Now let's compute precision and recall for our model.\n",
+    "\n",
+    "* Evaluate the model on all thresholds from 0.0 to 1.0 with step 0.01\n",
+    "* For each threshold, compute precision and recall\n",
+    "* Plot them\n",
+    "\n",
+    "At which threshold precision and recall curves intersect?\n",
+    "\n",
+    "* 0.145\n",
+    "* 0.345\n",
+    "* 0.545\n",
+    "* 0.745"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf3efc2b-3717-46c0-af08-899dbaa6db78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2969709f-56fb-4197-8cff-19be54604fe8",
+   "metadata": {},
+   "source": [
+    "### Question 4: F1 score\n",
+    "\n",
+    "Precision and recall are conflicting - when one grows, the other goes down. That's why they are often combined into the F1 score - a metrics that takes into account both\n",
+    "\n",
+    "This is the formula for computing F1:\n",
+    "\n",
+    "$$F_1 = 2 \\cdot \\cfrac{P \\cdot R}{P + R}$$\n",
+    "\n",
+    "Where $P$ is precision and $R$ is recall.\n",
+    "\n",
+    "Let's compute F1 for all thresholds from 0.0 to 1.0 with increment 0.01\n",
+    "\n",
+    "At which threshold F1 is maximal?\n",
+    "\n",
+    "- 0.14\n",
+    "- 0.34\n",
+    "- 0.54\n",
+    "- 0.74"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fa947aa-59d5-45b1-aafd-b12cc72d5595",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a367768-9694-4aa1-a7ce-19d218377564",
+   "metadata": {},
+   "source": [
+    "### Question 5: 5-Fold CV\n",
+    "\n",
+    "\n",
+    "Use the `KFold` class from Scikit-Learn to evaluate our model on 5 different folds:\n",
+    "\n",
+    "```\n",
+    "KFold(n_splits=5, shuffle=True, random_state=1)\n",
+    "```\n",
+    "\n",
+    "* Iterate over different folds of `df_full_train`\n",
+    "* Split the data into train and validation\n",
+    "* Train the model on train with these parameters: `LogisticRegression(solver='liblinear', C=1.0, max_iter=1000)`\n",
+    "* Use AUC to evaluate the model on validation\n",
+    "\n",
+    "How large is standard deviation of the scores across different folds?\n",
+    "\n",
+    "- 0.0001\n",
+    "- 0.006\n",
+    "- 0.06\n",
+    "- 0.36"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "899ca967-2e9d-45c3-aca6-876362531cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5eb7b51f-7e54-4af3-9fa7-93350ab8d41b",
+   "metadata": {},
+   "source": [
+    "### Question 6: Hyperparameter Tuning\n",
+    "\n",
+    "Now let's use 5-Fold cross-validation to find the best parameter `C`\n",
+    "\n",
+    "* Iterate over the following `C` values: `[0.000001, 0.001, 1]`\n",
+    "* Initialize `KFold` with the same parameters as previously\n",
+    "* Use these parameters for the model: `LogisticRegression(solver='liblinear', C=C, max_iter=1000)`\n",
+    "* Compute the mean score as well as the std (round the mean and std to 3 decimal digits)\n",
+    "\n",
+    "Which `C` leads to the best mean score?\n",
+    "\n",
+    "- 0.000001\n",
+    "- 0.001\n",
+    "- 1\n",
+    "\n",
+    "If you have ties, select the score with the lowest std. If you still have ties, select the smallest `C`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd785db4-f151-4a7c-8ce7-d4d3daf22586",
    "metadata": {},
    "outputs": [],
    "source": []
