homework 5 until qn 3 done

--- a/Homeworks/05-Deployment/Homework-05.ipynb
+++ b/Homeworks/05-Deployment/Homework-05.ipynb
@@ -48,8 +48,8 @@
    "source": [
     "## Question 1\n",
     "\n",
-    "* Install `uv`\n",
-    "* What's the version of uv you installed?\n",
+    "* Install `uv` ✔️\n",
+    "* What's the version of uv you installed? ✔️\n",
     "* Use `--version` to find out <--- (uv 0.9.5)"
    ]
   },
@@ -125,14 +125,18 @@
     "## Initialize an empty uv project\n",
     "\n",
     "You should create an empty folder for homework\n",
-    "and do it there. "
+    "and do it there. ✔️"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "51c56f08-b61f-4575-935d-a4fad2323b44",
    "metadata": {},
-   "source": []
+   "source": [
+    "```\n",
+    "uv init\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,15 +145,150 @@
    "source": [
     "## Question 2\n",
     "\n",
-    "* Use uv to install Scikit-Learn version 1.6.1 \n",
-    "* What's the first hash for Scikit-Learn you get in the lock file?\n",
-    "* Include the entire string starting with sha256:, don't include quotes"
+    "* Use uv to install Scikit-Learn version 1.6.1 ✔️\n",
+    "* What's the first hash for Scikit-Learn you get in the lock file? ✔️\n",
+    "* Include the entire string starting with sha256:, don't include quotes ✔️"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6859ff7-c393-424f-a580-010916038235",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "uv add scikit-learn==1.6.1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d282a03-373c-4146-b524-37925ed6490c",
+   "metadata": {},
+   "source": [
+    "Ans. sha256:b4fc2525eca2c69a59260f583c56a7557c6ccdf8deafdba6e060f94c1c59738e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e7c6b28-a414-4b1b-8e8e-799d5bc03b80",
+   "metadata": {},
+   "source": [
+    "## Models\n",
+    "\n",
+    "We have prepared a pipeline with a dictionary vectorizer and a model.\n",
+    "\n",
+    "And then saved with Pickle. Download it [here](https://github.com/DataTalksClub/machine-learning-zoomcamp/tree/master/cohorts/2025/05-deployment/pipeline_v1.bin). ✔️\n",
+    "\n",
+    "With `wget`:\n",
+    "\n",
+    "```bash\n",
+    "wget https://github.com/DataTalksClub/machine-learning-zoomcamp/raw/refs/heads/master/cohorts/2025/05-deployment/pipeline_v1.bin\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f7418d50-7b47-4ac1-8739-fa502adfa871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2025-10-27 16:02:30--  https://github.com/DataTalksClub/machine-learning-zoomcamp/raw/refs/heads/master/cohorts/2025/05-deployment/pipeline_v1.bin\n",
+      "Resolving github.com (github.com)... 4.237.22.38\n",
+      "Connecting to github.com (github.com)|4.237.22.38|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://raw.githubusercontent.com/DataTalksClub/machine-learning-zoomcamp/refs/heads/master/cohorts/2025/05-deployment/pipeline_v1.bin [following]\n",
+      "--2025-10-27 16:02:31--  https://raw.githubusercontent.com/DataTalksClub/machine-learning-zoomcamp/refs/heads/master/cohorts/2025/05-deployment/pipeline_v1.bin\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1300 (1.3K) [application/octet-stream]\n",
+      "Saving to: ‘pipeline_v1.bin’\n",
+      "\n",
+      "pipeline_v1.bin     100%[===================>]   1.27K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2025-10-27 16:02:31 (72.5 MB/s) - ‘pipeline_v1.bin’ saved [1300/1300]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://github.com/DataTalksClub/machine-learning-zoomcamp/raw/refs/heads/master/cohorts/2025/05-deployment/pipeline_v1.bin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeded27b-d9aa-4223-a015-26d5882436f1",
+   "metadata": {},
+   "source": [
+    "## Question 3\n",
+    "\n",
+    "Let's use the model!\n",
+    "\n",
+    "* Write a script for loading the pipeline with pickle ✔️\n",
+    "* Score this record: ✔️\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "    \"lead_source\": \"paid_ads\",\n",
+    "    \"number_of_courses_viewed\": 2,\n",
+    "    \"annual_income\": 79276.0\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "What's the probability that this lead will convert? \n",
+    "\n",
+    "* 0.333\n",
+    "* 0.533 <---\n",
+    "* 0.733\n",
+    "* 0.933\n",
+    "\n",
+    "If you're getting errors when unpickling the files, check their checksum: ✔️\n",
+    "\n",
+    "```bash\n",
+    "$ md5sum pipeline_v1.bin\n",
+    "7d17d2e4dfbaf1e408e1a62e6e880d49 *pipeline_v1.bin\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb5101db-fcd7-4012-964f-5c0d6ff84ddc",
+   "metadata": {},
+   "source": [
+    "## Question 4\n",
+    "\n",
+    "Now let's serve this model as a web service\n",
+    "\n",
+    "* Install FastAPI\n",
+    "* Write FastAPI code for serving the model\n",
+    "* Now score this client using `requests`:\n",
+    "\n",
+    "```python\n",
+    "url = \"YOUR_URL\"\n",
+    "client = {\n",
+    "    \"lead_source\": \"organic_search\",\n",
+    "    \"number_of_courses_viewed\": 4,\n",
+    "    \"annual_income\": 80304.0\n",
+    "}\n",
+    "requests.post(url, json=client).json()\n",
+    "```\n",
+    "\n",
+    "What's the probability that this client will get a subscription?\n",
+    "\n",
+    "* 0.334\n",
+    "* 0.534\n",
+    "* 0.734\n",
+    "* 0.934"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "749f7e6e-901c-43d3-a9ff-8b0091723507",
+   "id": "2fbcec62-ffa4-4baf-bf19-29af8c53cdbf",
    "metadata": {},
    "outputs": [],
    "source": []
