uptil question 5 homework 5 is fine. Qn 6 guessed

--- a/Homeworks/05-Deployment/Homework-05.ipynb
+++ b/Homeworks/05-Deployment/Homework-05.ipynb
@@ -280,15 +280,124 @@
     "What's the probability that this client will get a subscription?\n",
     "\n",
     "* 0.334\n",
-    "* 0.534\n",
+    "* 0.534 <---\n",
     "* 0.734\n",
     "* 0.934"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5506ba0-6a95-43f7-88ad-51d0d0bf8995",
+   "metadata": {},
+   "source": [
+    "## Docker\n",
+    "\n",
+    "Install [Docker](https://github.com/DataTalksClub/machine-learning-zoomcamp/blob/master/05-deployment/06-docker.md). \n",
+    "We will use it for the next two questions.\n",
+    "\n",
+    "For these questions, we prepared a base image: `agrigorev/zoomcamp-model:2025`. \n",
+    "You'll need to use it (see Question 5 for an example).\n",
+    "\n",
+    "This image is based on `3.13.5-slim-bookworm` and has\n",
+    "a pipeline with logistic regression (a different one)\n",
+    "as well a dictionary vectorizer inside. \n",
+    "\n",
+    "This is how the Dockerfile for this image looks like:\n",
+    "\n",
+    "```docker \n",
+    "FROM python:3.13.5-slim-bookworm\n",
+    "WORKDIR /code\n",
+    "COPY pipeline_v2.bin .\n",
+    "```\n",
+    "\n",
+    "We already built it and then pushed it to [`agrigorev/zoomcamp-model:2025`](https://hub.docker.com/r/agrigorev/zoomcamp-model)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0d2e00-bcbb-4a06-9886-22d462608639",
+   "metadata": {},
+   "source": [
+    "## Question 5\n",
+    "\n",
+    "Download the base image `agrigorev/zoomcamp-model:2025`. You can easily make it by using [docker pull](https://docs.docker.com/engine/reference/commandline/pull/) command.\n",
+    "\n",
+    "So what's the size of this base image?\n",
+    "\n",
+    "* 45 MB\n",
+    "* 121 MB <---\n",
+    "* 245 MB\n",
+    "* 330 MB\n",
+    "\n",
+    "You can get this information when running `docker images` - it'll be in the \"SIZE\" column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f44bf931-8fab-435c-923c-e736bac37ed5",
+   "metadata": {},
+   "source": [
+    "## Dockerfile\n",
+    "\n",
+    "Now create your own `Dockerfile` based on the image we prepared.\n",
+    "\n",
+    "It should start like that:\n",
+    "\n",
+    "```docker\n",
+    "FROM agrigorev/zoomcamp-model:2025\n",
+    "# add your stuff here\n",
+    "```\n",
+    "\n",
+    "Now complete it:\n",
+    "\n",
+    "* Install all the dependencies from pyproject.toml\n",
+    "* Copy your FastAPI script\n",
+    "* Run it with uvicorn \n",
+    "\n",
+    "After that, you can build your docker image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fbcec62-ffa4-4baf-bf19-29af8c53cdbf",
+   "id": "4d19a5b8-784b-4d3c-b4c5-40e5cbe8e601",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c232f63c-b9d3-4b77-9744-8d674d00ffd9",
+   "metadata": {},
+   "source": [
+    "## Question 6\n",
+    "\n",
+    "Let's run your docker container!\n",
+    "\n",
+    "After running it, score this client once again:\n",
+    "\n",
+    "```python\n",
+    "url = \"YOUR_URL\"\n",
+    "client = {\n",
+    "    \"lead_source\": \"organic_search\",\n",
+    "    \"number_of_courses_viewed\": 4,\n",
+    "    \"annual_income\": 80304.0\n",
+    "}\n",
+    "requests.post(url, json=client).json()\n",
+    "```\n",
+    "\n",
+    "What's the probability that this lead will convert?\n",
+    "\n",
+    "* 0.39\n",
+    "* 0.59 <--- (guess)\n",
+    "* 0.79\n",
+    "* 0.99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01d21ee2-0bb4-4129-9faa-cf2c090c4e8c",
    "metadata": {},
    "outputs": [],
    "source": []
