--- a/Homeworks/06-Trees/Homework-06.ipynb
+++ b/Homeworks/06-Trees/Homework-06.ipynb
@@ -71,10 +71,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3b42c17c-4432-4ce1-ad78-c9f8aacab71d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "engine_displacement      0\n",
+       "num_cylinders          482\n",
+       "horsepower             708\n",
+       "vehicle_weight           0\n",
+       "acceleration           930\n",
+       "model_year               0\n",
+       "origin                   0\n",
+       "fuel_type                0\n",
+       "drivetrain               0\n",
+       "num_doors              502\n",
+       "fuel_efficiency_mpg      0\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>engine_displacement</th>\n",
+       "      <th>num_cylinders</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>vehicle_weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>drivetrain</th>\n",
+       "      <th>num_doors</th>\n",
+       "      <th>fuel_efficiency_mpg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>170</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>3413.433759</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.231729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>130</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>3149.664934</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.688217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>170</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>3079.038997</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.246341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>220</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2542.392402</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.912736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>210</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3460.870990</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>12.488369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9699</th>\n",
+       "      <td>140</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>2981.107371</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.101802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9700</th>\n",
+       "      <td>180</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>2439.525729</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.962326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9701</th>\n",
+       "      <td>220</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>2583.471318</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>17.186587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9702</th>\n",
+       "      <td>230</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>2905.527390</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.331551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9703</th>\n",
+       "      <td>270</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>2908.043477</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>14.884467</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9704 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      engine_displacement  num_cylinders  horsepower  vehicle_weight  \\\n",
+       "0                     170            3.0       159.0     3413.433759   \n",
+       "1                     130            5.0        97.0     3149.664934   \n",
+       "2                     170            0.0        78.0     3079.038997   \n",
+       "3                     220            4.0         0.0     2542.392402   \n",
+       "4                     210            1.0       140.0     3460.870990   \n",
+       "...                   ...            ...         ...             ...   \n",
+       "9699                  140            5.0       164.0     2981.107371   \n",
+       "9700                  180            0.0       154.0     2439.525729   \n",
+       "9701                  220            2.0       138.0     2583.471318   \n",
+       "9702                  230            4.0       177.0     2905.527390   \n",
+       "9703                  270            3.0       140.0     2908.043477   \n",
+       "\n",
+       "      acceleration  model_year  origin fuel_type         drivetrain  \\\n",
+       "0             17.7        2003  Europe  Gasoline    All-wheel drive   \n",
+       "1             17.8        2007     USA  Gasoline  Front-wheel drive   \n",
+       "2             15.1        2018  Europe  Gasoline  Front-wheel drive   \n",
+       "3             20.2        2009     USA    Diesel    All-wheel drive   \n",
+       "4             14.4        2009  Europe  Gasoline    All-wheel drive   \n",
+       "...            ...         ...     ...       ...                ...   \n",
+       "9699          17.3        2013  Europe    Diesel  Front-wheel drive   \n",
+       "9700          15.0        2004     USA  Gasoline    All-wheel drive   \n",
+       "9701          15.1        2008     USA    Diesel    All-wheel drive   \n",
+       "9702          19.4        2011     USA    Diesel  Front-wheel drive   \n",
+       "9703          14.7        2005    Asia    Diesel    All-wheel drive   \n",
+       "\n",
+       "      num_doors  fuel_efficiency_mpg  \n",
+       "0           0.0            13.231729  \n",
+       "1           0.0            13.688217  \n",
+       "2           0.0            14.246341  \n",
+       "3           2.0            16.912736  \n",
+       "4           2.0            12.488369  \n",
+       "...         ...                  ...  \n",
+       "9699        0.0            15.101802  \n",
+       "9700        0.0            17.962326  \n",
+       "9701       -1.0            17.186587  \n",
+       "9702        1.0            15.331551  \n",
+       "9703       -1.0            14.884467  \n",
+       "\n",
+       "[9704 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd, numpy as np\n",
     "\n",
@@ -82,31 +344,70 @@
     "df_original = pd.read_csv(file)\n",
     "df = df_original.copy()\n",
     "display(df.isnull().sum())\n",
-    "df = df.fillna(0)"
+    "df = df.fillna(0)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "07e1672a-1588-4ab7-80a3-5090f166c8e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "df_full_train, df_test = train_test_split(df, test_size=0.2, random_state=1)\n",
+    "df_train, df_val = train_test_split(df_full_train, test_size=0.25, random_state=1)\n",
+    "\n",
+    "df_train = df_train.reset_index(drop=True)\n",
+    "df_val = df_val.reset_index(drop=True)\n",
+    "df_test = df_test.reset_index(drop=True)\n",
+    "\n",
+    "y_train = df_train.fuel_efficiency_mpg.values\n",
+    "y_val = df_val.fuel_efficiency_mpg.values\n",
+    "y_test = df_test.fuel_efficiency_mpg.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b3eee680-df1d-4379-a34c-832256ef5070",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del df_train['fuel_efficiency_mpg']\n",
+    "del df_val['fuel_efficiency_mpg']\n",
+    "del df_test['fuel_efficiency_mpg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3367850c-8e34-4e93-82f5-94b1d363cfd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9704, 7763, 5822, 1941, 1941)"
+       "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+       "\twith 58220 stored elements and shape (5822, 14)>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "df_full_train, df_test = train_test_split(df, test_size=0.2, random_state=1)\n",
-    "df_train, df_val = train_test_split(df_full_train, test_size=0.25, random_state=1)\n"
+    "dv = DictVectorizer(sparse=True)\n",
+    "train_dict = df_train.to_dict(orient='records')\n",
+    "X_train = dv.fit_transform(train_dict)\n",
+    "X_train"
    ]
   },
   {
@@ -124,7 +425,7 @@
     "Which feature is used for splitting the data?\n",
     "\n",
     "\n",
-    "* `'vehicle_weight'`\n",
+    "* `'vehicle_weight'` <---\n",
     "* `'model_year'`\n",
     "* `'origin'`\n",
     "* `'fuel_type'`"
@@ -132,8 +433,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "298bbd42-4b25-43f3-b161-5cf72d778ed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|--- vehicle_weight <= 3022.11\n",
+      "|   |--- value: [16.88]\n",
+      "|--- vehicle_weight >  3022.11\n",
+      "|   |--- value: [12.94]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import export_text\n",
+    "\n",
+    "dt = DecisionTreeRegressor(max_depth=1)\n",
+    "dt.fit(X_train, y_train)\n",
+    "print(export_text(dt, feature_names=list(dv.get_feature_names_out())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9f1f8fa-087d-41cc-8eb3-21c1ef64ba4e",
    "metadata": {},
    "outputs": [],
    "source": []
